Correcting layout shift caused by borders

--- a/styles/fields/button.css
+++ b/styles/fields/button.css
@@ -17,7 +17,8 @@ button {
     }
    
     &.btn-secondary {
-        border: 1px solid var(--stroke-highlight);
+        border: 0.125rem solid transparent;
+        outline: 1px solid var(--stroke-highlight);
         color: var(--text-highlight);
         background-color: var(--surface-primary);
         margin-left: auto;
@@ -25,7 +26,7 @@ button {
         &:hover,
         &:focus {
             outline: 0.25rem solid var(--surface-secondary);
-            border: 0.125rem solid var(--brand-color-dark);
+            border-color: var(--stroke-highlight);
             color: var(--brand-color-dark);
         }
     }
